--- a/glagoljostrelka/index.html
+++ b/glagoljostrelka/index.html
@@ -28,7 +28,7 @@
     </head>
     <body>
         <div id="pismo-izbor" style="text-align:center; ">
-            <div style="max-width: 1200px; padding: 50px;">
+            <div style="max-width: 1200px; padding: 50px; margin: auto;">
             <h1 style="margin-bottom: 0;">Glagoljostrelka</h1>
 <p>Igra inspirirana klasičnom arkadnom igrom Space Invaders. Igrač u igri mora pogoditi sva slova prije nego što se zabiju u njega ili ga pogode. <br>Igrači mogu izabrati žele li pogođati glagoljična ili latinična slova koja su zajedno oblikovana kao slova glagoljične azbuke. <br>Za svako pogođeno glagljično slovo pojavljuje se njegova inačica na latinici. Igra nije predviđena za mobilne uređaje te se igra na tipkovnici.</p>
 <h2>Odaberi pismo za gađanje</h2>
