--- a/glagoljostrelka/index.html
+++ b/glagoljostrelka/index.html
@@ -30,7 +30,7 @@
         <div id="pismo-izbor" style="text-align:center; ">
             <div style="max-width: 1200px; padding: 50px; margin: auto;">
             <h1 style="margin-bottom: 0;">Glagoljostrelka</h1>
-<p>Igra inspirirana klasičnom arkadnom igrom Space Invaders. Igrač u igri mora pogoditi sva slova prije nego što se zabiju u njega ili ga pogode. <br>Igrači mogu izabrati žele li pogođati glagoljična ili latinična slova koja su zajedno oblikovana kao slova glagoljične azbuke. <br>Za svako pogođeno glagljično slovo pojavljuje se njegova inačica na latinici. Igra nije predviđena za mobilne uređaje te se igra na tipkovnici.</p>
+<p>Igra inspirirana klasi<span style="letter-spacing: 0.2em;">č</span>nom arkadnom igrom Space Invaders. Igra<span style="letter-spacing: 0.2em;">č</span> u igri mora pogoditi sva slova prije nego što se zabiju u njega ili ga pogode. <br>Igra<span style="letter-spacing: 0.2em;">č</span>i mogu izabrati žele li pogođati glagolji<span style="letter-spacing: 0.2em;">č</span>na ili latini<span style="letter-spacing: 0.2em;">č</span>na slova koja su zajedno oblikovana kao slova glagolji<span style="letter-spacing: 0.2em;">č</span>ne azbuke. <br>Za svako pogođeno glaglji<span style="letter-spacing: 0.2em;">č</span>no slovo pojavljuje se njegova ina<span style="letter-spacing: 0.2em;">č</span>ica na latinici. Igra nije predviđena za mobilne uređaje te se igra na tipkovnici.</p>
 <h2>Odaberi pismo za gađanje</h2>
 <div class="gumbi-container">
     <div class="pismo-opcija">
