--- a/glagoljostrelka/index.html
+++ b/glagoljostrelka/index.html
@@ -5,7 +5,7 @@
         <title>Glagoljostrelka</title>
         <meta name="viewport" content="width=device-width, initial-scale=1,
             maximum-scale=1">
-            <meta name="description" content="Igra inspirirana klasičnom arkadnom igrom Space Invaders. Igrač u igri mora pogoditi sva glagoljična slova prije nego što se zabiju u njega ili ga pogode. Za svako pogođeno glagljično slovo pojavljuje se njegova inačica na latinici.">
+            <meta name="description" content="Igra inspirirana klasičnom arkadnom igrom Space Invaders. Igrač u igri mora pogoditi sva slova prije nego što se zabiju u njega ili ga pogode. Igrači mogu izabrati žele li pogođati glagoljična ili latinična slova koja su zajedno oblikovana kao slova glagoljične azbuke. Za svako pogođeno glagljično slovo pojavljuje se njegova inačica na latinici. Igra nije predviđena za mobilne uređaje te se igra na tipkovnici.">
             <meta name="keywords" content="glagoljica, igra">
             <meta name="author" content="Josip Mihaljević, Staroslavenski institut">
         <link rel="stylesheet"
@@ -15,7 +15,7 @@
         <script src="js/jquery.min.js"></script>
 
         <meta property="og:title" content="Glagoljostrelka" />
-        <meta property="og:description" content="Igra inspirirana klasičnom arkadnom igrom Space Invaders. Igrač u igri mora pogoditi sva glagoljična slova prije nego što se zabiju u njega ili ga pogode. Za svako pogođeno glagljično slovo pojavljuje se njegova inačica na latinici." />
+        <meta property="og:description" content="Igra inspirirana klasičnom arkadnom igrom Space Invaders. Igrač u igri mora pogoditi sva slova prije nego što se zabiju u njega ili ga pogode. Igrači mogu izabrati žele li pogođati glagoljična ili latinična slova koja su zajedno oblikovana kao slova glagoljične azbuke. Za svako pogođeno glagljično slovo pojavljuje se njegova inačica na latinici. Igra nije predviđena za mobilne uređaje te se igra na tipkovnici." />
         <meta property="og:type" content="game" />
         <meta property="og:image"
             content="slika.png" />
