--- a/glagoljostrelka/index.html
+++ b/glagoljostrelka/index.html
@@ -5,7 +5,7 @@
         <title>Glagoljostrelka</title>
         <meta name="viewport" content="width=device-width, initial-scale=1,
             maximum-scale=1">
-            <meta name="description" content="Igra inspirirana klasičnom arkadnom igrom Space Invaders. Igrač u igri mora pogoditi sva slova prije nego što se zabiju u njega ili ga pogode. Igrači mogu izabrati žele li pogođati glagoljična ili latinična slova koja su zajedno oblikovana kao slova glagoljične azbuke. Za svako pogođeno glagljično slovo pojavljuje se njegova inačica na latinici. Igra nije predviđena za mobilne uređaje te se igra na tipkovnici.">
+            <meta name="description" content="Igra inspirirana klasičnom arkadnom igrom Space Invaders. Igrač u igri mora pogoditi sva slova prije nego što se zabiju u njega ili ga pogode. Igrači mogu izabrati žele li gađati glagoljična ili latinična slova koja su zajedno oblikovana kao slova glagoljične azbuke. Za svako pogođeno glagljično slovo pojavljuje se njegova inačica na latinici. Igra nije predviđena za mobilne uređaje te se igra na tipkovnici.">
             <meta name="keywords" content="glagoljica, igra">
             <meta name="author" content="Josip Mihaljević, Staroslavenski institut">
         <link rel="stylesheet"
@@ -47,7 +47,7 @@
         <span class="pismo-natpis">latinica</span>
       </div>
 </div>
-<p style="font-size: 12px;">Ovaj igra izrađen je u sklopu projekta <a style="color:#2F2D86" href="https://stin.hr/sadrzaj/digistin/">DigiSTIN</a>.</p>
+<p style="font-size: 12px;">Ovaj igra izrađena je u sklopu projekta <a style="color:#2F2D86" href="https://stin.hr/sadrzaj/digistin/">DigiSTIN</a>.</p>
           </div>
           </div>
         <div id="loader" style="display: none;">
