--- a/glagoljostrelka/index.html
+++ b/glagoljostrelka/index.html
@@ -24,6 +24,8 @@
     <meta name="msapplication-TileImage" content="ms-icon-144x144.png">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="ms-icon-144x144.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+
             <meta name="theme-color" content="#ffffff">
     </head>
     <body>
