--- a/glagoljostrelka/index.html
+++ b/glagoljostrelka/index.html
@@ -5,7 +5,7 @@
         <title>Glagoljostrelka</title>
         <meta name="viewport" content="width=device-width, initial-scale=1,
             maximum-scale=1">
-            <meta name="description" content="Igra inspirirana klasičnom arkadnom igrom Space Invaders. Igrač u igri mora pogoditi sva slova prije nego što se zabiju u njega ili ga pogode. Igrači mogu izabrati žele li gađati glagoljična ili latinična slova koja su zajedno oblikovana kao slova glagoljične azbuke. Za svako pogođeno glagljično slovo pojavljuje se njegova inačica na latinici. Igra nije predviđena za mobilne uređaje te se igra na tipkovnici.">
+            <meta name="description" content="Igra inspirirana klasičnom arkadnom igrom Space Invaders. Igrač u igri mora pogoditi sva slova prije nego što se zabiju u njega ili ga pogode. Igrači mogu izabrati žele li gađati glagoljična ili latinična slova koja su zajedno oblikovana kao slova glagoljične azbuke. Za svako pogođeno glagljično slovo pojavljuje se njegova inačica na latinici. Igra se može igrati i na mobilnim uređajima, ali je preporuka da se igra na tipkovnici.">
             <meta name="keywords" content="glagoljica, igra">
             <meta name="author" content="Josip Mihaljević, Staroslavenski institut">
         <link rel="stylesheet"
@@ -15,7 +15,7 @@
         <script src="js/jquery.min.js"></script>
 
         <meta property="og:title" content="Glagoljostrelka" />
-        <meta property="og:description" content="Igra inspirirana klasičnom arkadnom igrom Space Invaders. Igrač u igri mora pogoditi sva slova prije nego što se zabiju u njega ili ga pogode. Igrači mogu izabrati žele li pogođati glagoljična ili latinična slova koja su zajedno oblikovana kao slova glagoljične azbuke. Za svako pogođeno glagljično slovo pojavljuje se njegova inačica na latinici. Igra nije predviđena za mobilne uređaje te se igra na tipkovnici." />
+        <meta property="og:description" content="Igra inspirirana klasičnom arkadnom igrom Space Invaders. Igrač u igri mora pogoditi sva slova prije nego što se zabiju u njega ili ga pogode. Igrači mogu izabrati žele li pogođati glagoljična ili latinična slova koja su zajedno oblikovana kao slova glagoljične azbuke. Za svako pogođeno glagljično slovo pojavljuje se njegova inačica na latinici. Igra se može igrati i na mobilnim uređajima, ali je preporuka da se igra na tipkovnici." />
         <meta property="og:type" content="game" />
         <meta property="og:image"
             content="slika.png" />
@@ -32,7 +32,7 @@
         <div id="pismo-izbor" style="text-align:center; ">
             <div style="max-width: 1200px; padding: 50px; margin: auto;">
             <h1 style="margin-bottom: 0;">Glagoljostrelka</h1>
-<p>Igra inspirirana klasi<span style="letter-spacing: 0.2em;">č</span>nom arkadnom igrom Space Invaders. Igra<span style="letter-spacing: 0.2em;">č</span> u igri mora pogoditi sva slova prije nego što se zabiju u njega ili ga pogode. <br>Igra<span style="letter-spacing: 0.2em;">č</span>i mogu izabrati žele li pogođati glagolji<span style="letter-spacing: 0.2em;">č</span>na ili latini<span style="letter-spacing: 0.2em;">č</span>na slova koja su zajedno oblikovana kao slova glagolji<span style="letter-spacing: 0.2em;">č</span>ne azbuke. <br>Za svako pogođeno glaglji<span style="letter-spacing: 0.2em;">č</span>no slovo pojavljuje se njegova ina<span style="letter-spacing: 0.2em;">č</span>ica na latinici. Igra nije predviđena za mobilne uređaje te se igra na tipkovnici.</p>
+<p>Igra inspirirana klasi<span style="letter-spacing: 0.2em;">č</span>nom arkadnom igrom Space Invaders. Igra<span style="letter-spacing: 0.2em;">č</span> u igri mora pogoditi sva slova prije nego što se zabiju u njega ili ga pogode. Igra<span style="letter-spacing: 0.2em;">č</span>i mogu izabrati žele li pogođati glagolji<span style="letter-spacing: 0.2em;">č</span>na ili latini<span style="letter-spacing: 0.2em;">č</span>na slova koja su zajedno oblikovana kao slova glagolji<span style="letter-spacing: 0.2em;">č</span>ne azbuke. Za svako pogođeno glaglji<span style="letter-spacing: 0.2em;">č</span>no slovo pojavljuje se njegova ina<span style="letter-spacing: 0.2em;">č</span>ica na latinici. Igra se može igrati i na mobilnim uređajima, ali je preporuka da se igra na tipkovnici.</p>
 <h2>Odaberi pismo za gađanje</h2>
 <div class="gumbi-container">
     <div class="pismo-opcija">
@@ -49,7 +49,7 @@
         <span class="pismo-natpis">latinica</span>
       </div>
 </div>
-<p style="font-size: 12px;">Ovaj igra izrađena je u sklopu projekta <a style="color:#2F2D86" href="https://stin.hr/sadrzaj/digistin/">DigiSTIN</a>.</p>
+<p style="font-size: 12px;">Ovaj igra izrađena je u sklopu projekta <a style="color:#2F2D86" href="https://stin.hr/sadrzaj/digistin/">DigiSTIN</a>.<br>Dizajn i programiranje: <a style="color:#2F2D86" href="https://stin.hr/sadrzaj/dr-sc-josip-mihaljevic/">Josip Mihaljevi<span style="letter-spacing: 0.2em;">ć</span></a>; Glazba: <a style="color:#2F2D86" href="https://stin.hr/sadrzaj/marko-brkljacic/">Marko Brklja<span style="letter-spacing: 0.2em;">č</span>i<span style="letter-spacing: 0.2em;">ć</span></a></p>
           </div>
           </div>
         <div id="loader" style="display: none;">
@@ -57,7 +57,7 @@
             <div class="loader-frame">
                 <div class="glagoljsko-slovo">s</div>
             </div>
-            <div class="loader-text bottom">Igra nije namijenjena za mobilne uređaje</div>
+            <div class="loader-text bottom">© Staroslavenski institut</div>
         </div>
         <audio id="strela">
             <source src="zvuk/pucanje.ogg" type="audio/ogg">
