--- a/glagoljostrelka/index.html
+++ b/glagoljostrelka/index.html
@@ -57,7 +57,7 @@
             <div class="loader-frame">
                 <div class="glagoljsko-slovo">s</div>
             </div>
-            <div class="loader-text bottom">© Staroslavenski institut</div>
+            <div class="loader-text bottom"><span style="font-family: serif;">©</span> Staroslavenski institut</div>
         </div>
         <audio id="strela">
             <source src="zvuk/pucanje.ogg" type="audio/ogg">
