--- a/glagoljostrelka/index.html
+++ b/glagoljostrelka/index.html
@@ -18,7 +18,7 @@
         <meta property="og:description" content="Igra inspirirana klasičnom arkadnom igrom Space Invaders. Igrač u igri mora pogoditi sva slova prije nego što se zabiju u njega ili ga pogode. Igrači mogu izabrati žele li pogođati glagoljična ili latinična slova koja su zajedno oblikovana kao slova glagoljične azbuke. Za svako pogođeno glagljično slovo pojavljuje se njegova inačica na latinici. Igra se može igrati i na mobilnim uređajima, ali je preporuka da se igra na tipkovnici." />
         <meta property="og:type" content="game" />
         <meta property="og:image"
-            content="slika.png" />
+            content="og-slika.jpg" />
             <link rel="icon" type="image/png" href="./favicon.ico">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="ms-icon-144x144.png">
