--- a/glagoljostrelka/index.html
+++ b/glagoljostrelka/index.html
@@ -18,7 +18,7 @@
         <meta property="og:description" content="Igra inspirirana klasičnom arkadnom igrom Space Invaders. Igrač u igri mora pogoditi sva slova prije nego što se zabiju u njega ili ga pogode. Igrači mogu izabrati žele li pogođati glagoljična ili latinična slova koja su zajedno oblikovana kao slova glagoljične azbuke. Za svako pogođeno glagljično slovo pojavljuje se njegova inačica na latinici. Igra se može igrati i na mobilnim uređajima, ali je preporuka da se igra na tipkovnici." />
         <meta property="og:type" content="game" />
         <meta property="og:image"
-            content="og-slika.jpg" />
+            content="glagoljica_og.jpg" />
             <link rel="icon" type="image/png" href="./favicon.ico">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="ms-icon-144x144.png">
@@ -32,7 +32,7 @@
         <div id="pismo-izbor" style="text-align:center; ">
             <div style="max-width: 1200px; padding: 50px; margin: auto;">
             <h1 style="margin-bottom: 0;">Glagoljostrelka</h1>
-<p>Igra inspirirana klasi<span style="letter-spacing: 0.2em;">č</span>nom arkadnom igrom Space Invaders. Igra<span style="letter-spacing: 0.2em;">č</span> u igri mora pogoditi sva slova prije nego što se zabiju u njega ili ga pogode. Igra<span style="letter-spacing: 0.2em;">č</span>i mogu izabrati žele li pogođati glagolji<span style="letter-spacing: 0.2em;">č</span>na ili latini<span style="letter-spacing: 0.2em;">č</span>na slova koja su zajedno oblikovana kao slova glagolji<span style="letter-spacing: 0.2em;">č</span>ne azbuke. Za svako pogođeno glaglji<span style="letter-spacing: 0.2em;">č</span>no slovo pojavljuje se njegova ina<span style="letter-spacing: 0.2em;">č</span>ica na latinici. Igra se može igrati i na mobilnim uređajima, ali je preporuka da se igra na tipkovnici.</p>
+<p>Igra inspirirana klasi<span style="letter-spacing: 0.2em;">č</span>nom arkadnom igrom Space Invaders. Igra<span style="letter-spacing: 0.2em;">č</span> u igri mora pogoditi sva slova prije nego što se zabiju u njega ili ga pogode. Igra<span style="letter-spacing: 0.2em;">č</span>i mogu izabrati žele li gađati glagolji<span style="letter-spacing: 0.2em;">č</span>na ili latini<span style="letter-spacing: 0.2em;">č</span>na slova koja su zajedno oblikovana kao slova glagolji<span style="letter-spacing: 0.2em;">č</span>ne azbuke. Za svako pogođeno glagolji<span style="letter-spacing: 0.2em;">č</span>no slovo pojavljuje se njegova ina<span style="letter-spacing: 0.2em;">č</span>ica na latinici. Igra se može igrati i na mobilnim uređajima, ali je preporuka da se igra na tipkovnici.</p>
 <h2>Odaberi pismo za gađanje</h2>
 <div class="gumbi-container">
     <div class="pismo-opcija">
