--- a/sudoku/index.html
+++ b/sudoku/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - SUDOKU</title>
+  <title>Glagoljaški sudoku</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
@@ -14,11 +14,11 @@
    <span class="bar"></span>
 </a>
 
-<h1 id="sudoku_title">SUDOKU</h1>
+<h1 id="sudoku_title">Glagoljaški sudoku</h1>
 
 <div id="sudoku_menu">
   <ul>
-    <li><a class="restart" href="#">New Game</a></li>
+    <li><a class="restart" href="#">Nova igra</a></li>
     <li></li>
   </ul>
 </div>
