--- a/sudoku/index.html
+++ b/sudoku/index.html
@@ -14,7 +14,7 @@
    <span class="bar"></span>
 </a>
 
-<h1 id="sudoku_title">Glagoljaški sudoku</h1>
+<h1 id="sudoku_title"><span style="font-family: FSGLA; font-weight:300">glagoljaški</span> <span style="font-weight:300">sudoku</span></h1>
 
 <div id="sudoku_menu">
   <ul>
