--- a/sudoku/index.html
+++ b/sudoku/index.html
@@ -20,13 +20,13 @@
 
      <meta property="og:title" content="Glagoljični sudoku" />
     <meta property="og:description" content="Glagoljični sudoku u kojemu brojevi od 1 do 9 nisu zapisani arapskim brojkama, nego glagoljičnim slovima. Cilj je popuniti mrežu tako da se svaki glagoljični broj od 1 do 9 pojavi jednom u svakome redu, stupcu i svojoj matrici 3 × 3." />
-    <meta property="og:image" content="og-slika.jpg" />
+    <meta property="og:image" content="og-slika.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@stin" />
     <meta name="twitter:title" content="Prepoznaj broj napisan glagoljicom" />
     <meta name="twitter:description" content="Glagoljični sudoku u kojemu brojevi od 1 do 9 nisu zapisani arapskim brojkama, nego glagoljičnim slovima. Cilj je popuniti mrežu tako da se svaki glagoljični broj od 1 do 9 pojavi jednom u svakome redu, stupcu i svojoj matrici 3 × 3." />
-    <meta name="twitter:image" content="og-slika.jpg" />
+    <meta name="twitter:image" content="og-slika.png" />
 </head>
 <body>
 <div class="topbar">
