--- a/kviz-zivotinje/index.html
+++ b/kviz-zivotinje/index.html
@@ -47,6 +47,7 @@
                         <br>
                         <hr class="style-two">
                         <p>Interaktivni kviz u kojem se pojavljuju nazivi životinja napisani glagoljicom. Igrači biraju jedan točan odgovor među četiri ponuđene opcije i testiraju svoje znanje glagoljice.</p>
+                        <img src="naslovnica.png" style="max-width: 100%;">
                         <button class="btn uglata gla init-page__btn">igraj</button>
                                                 <br><p style="text-align: center;">Ovaj je kviz izrađen u sklopu projekta <a href="https://stin.hr/sadrzaj/digistin/" target="_blank">DigiSTIN</a>.</p>
 
