--- a/kviz-zivotinje/index.html
+++ b/kviz-zivotinje/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>GlagoZoo</title>
     <meta charset="utf-8">
-    <meta name="description" content="Interaktivni kviz u kojem se pojavljuju nazivi životinja napisani glagoljicom. Igrači biraju jedan točan odgovor među četiri ponuđene opcije i testiraju svoje znanje glagoljice.">
+    <meta name="description" content="Interaktivni kviz u kojemu se pojavljuju hrvatski crkvenoslavenski nazivi životinja napisani glagoljicom. Igrači biraju jedan točan odgovor između četiriju ponuđenih opcija i testiraju svoje znanje glagoljice i hrvatskoga crkvenoslavenskoga.">
     <meta name="keywords" content="kviz, ligature, staroslavenski, glagoljica">
     <meta name="author" content="STIN">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -20,13 +20,13 @@
     <link rel="stylesheet" href="css/sweetalert2.min.css">
     <link rel="stylesheet" href="css/style.css">
     <meta property="og:title" content="GlagoZoo" />
-    <meta property="og:description" content="Interaktivni kviz u kojem se pojavljuju nazivi životinja napisani glagoljicom. Igrači biraju jedan točan odgovor među četiri ponuđene opcije i testiraju svoje znanje glagoljice." />
+    <meta property="og:description" content="Interaktivni kviz u kojemu se pojavljuju hrvatski crkvenoslavenski nazivi životinja napisani glagoljicom. Igrači biraju jedan točan odgovor između četiriju ponuđenih opcija i testiraju svoje znanje glagoljice i hrvatskoga crkvenoslavenskoga." />
     <meta property="og:image" content="og-slika.png" />
     <meta property="og:url" content="https://ahrefs.com/blog/open-graph-meta-tags/" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@stin" />
     <meta name="twitter:title" content="GlagoZoo" />
-    <meta name="twitter:description" content="Interaktivni kviz u kojem se pojavljuju nazivi životinja napisani glagoljicom. Igrači biraju jedan točan odgovor među četiri ponuđene opcije i testiraju svoje znanje glagoljice." />
+    <meta name="twitter:description" content="Interaktivni kviz u kojemu se pojavljuju hrvatski crkvenoslavenski nazivi životinja napisani glagoljicom. Igrači biraju jedan točan odgovor između četiriju ponuđenih opcija i testiraju svoje znanje glagoljice i hrvatskoga crkvenoslavenskoga." />
     <meta name="twitter:image" content="og-slika.png" />
 </head>
 
@@ -46,10 +46,10 @@
                         <h2 class="winner" style="font-size:2rem">GlagoZoo</h2>
                         <br>
                         <hr class="style-two">
-                        <p>Interaktivni kviz u kojem se pojavljuju nazivi životinja napisani glagoljicom. Igrači biraju jedan točan odgovor među četiri ponuđene opcije i testiraju svoje znanje glagoljice.</p>
+                        <p>Interaktivni kviz u kojemu se pojavljuju hrvatski crkvenoslavenski nazivi životinja napisani glagoljicom. Igrači biraju jedan točan odgovor između četiriju ponuđenih opcija i testiraju svoje znanje glagoljice i hrvatskoga crkvenoslavenskoga.</p>
                         <img src="naslovnica.png" style="max-width: 100%;">
                         <button class="btn uglata gla init-page__btn">igraj</button>
-                                                <br><p style="text-align: center;">Ovaj je kviz izrađen u sklopu projekta <a href="https://stin.hr/sadrzaj/digistin/" target="_blank">DigiSTIN</a>.</p>
+                                                <br><p style="text-align: center;">Ovaj je kviz izrađen u sklopu projekta <a href="https://stin.hr/sadrzaj/digistin/" target="_blank">DigiSTIN</a> i <a href="https://stin.hr/sadrzaj/hrvatskoglagoljski-animalisticki-leksik/" target="_blank">HAL</a>.</p>
 
                   </div>
 
@@ -84,7 +84,7 @@
                 <br>
                 <p class="results-page__info">S obzirom na broj točnih odgovora i vrijeme ostvaren je sljedeći broj bodova:</p>
                 <h3 class="results-page__bodovi"></h3>
-                <p class="results-page__info">Zapratite nas na Facebooku kako bi otkrili nove glagoljaške sadržaje. <br> <a href="https://www.facebook.com/stin.hr" target="_blank"><i class="fab fa-facebook-square"></i></a></p>
+                <p class="results-page__info">Zapratite nas na Facebooku  kako biste otkrili nove glagoljaške sadržaje. <br> <a href="https://www.facebook.com/stin.hr" target="_blank"><i class="fab fa-facebook-square"></i></a></p>
                 <br>
                 <p>
 
