--- a/kviz-zivotinje/index.html
+++ b/kviz-zivotinje/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>GlagoZoo</title>
     <meta charset="utf-8">
-    <meta name="description" content="Interaktivni kviz u kojemu se pojavljuju hrvatski crkvenoslavenski nazivi životinja napisani glagoljicom. Igrači biraju jedan točan odgovor između četiriju ponuđenih opcija i testiraju svoje znanje glagoljice i hrvatskoga crkvenoslavenskoga.">
+    <meta name="description" content="Interaktivni kviz u kojemu se pojavljuju hrvatski crkvenoslavenski nazivi životinja napisani glagoljicom. Igrači biraju jedan točan odgovor između četiriju ponuđenih opcija i testiraju svoje znanje glagoljice i hrvatskoga crkvenoslavenskoga. Kako bi se bolje usvojila glagoljica, i suvremene su hrvatske riječi napisane njome.">
     <meta name="keywords" content="kviz, ligature, staroslavenski, glagoljica">
     <meta name="author" content="STIN">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -20,13 +20,13 @@
     <link rel="stylesheet" href="css/sweetalert2.min.css">
     <link rel="stylesheet" href="css/style.css">
     <meta property="og:title" content="GlagoZoo" />
-    <meta property="og:description" content="Interaktivni kviz u kojemu se pojavljuju hrvatski crkvenoslavenski nazivi životinja napisani glagoljicom. Igrači biraju jedan točan odgovor između četiriju ponuđenih opcija i testiraju svoje znanje glagoljice i hrvatskoga crkvenoslavenskoga." />
+    <meta property="og:description" content="Interaktivni kviz u kojemu se pojavljuju hrvatski crkvenoslavenski nazivi životinja napisani glagoljicom. Igrači biraju jedan točan odgovor između četiriju ponuđenih opcija i testiraju svoje znanje glagoljice i hrvatskoga crkvenoslavenskoga. Kako bi se bolje usvojila glagoljica, i suvremene su hrvatske riječi napisane njome." />
     <meta property="og:image" content="og-slika.png" />
     <meta property="og:url" content="https://ahrefs.com/blog/open-graph-meta-tags/" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@stin" />
     <meta name="twitter:title" content="GlagoZoo" />
-    <meta name="twitter:description" content="Interaktivni kviz u kojemu se pojavljuju hrvatski crkvenoslavenski nazivi životinja napisani glagoljicom. Igrači biraju jedan točan odgovor između četiriju ponuđenih opcija i testiraju svoje znanje glagoljice i hrvatskoga crkvenoslavenskoga." />
+    <meta name="twitter:description" content="Interaktivni kviz u kojemu se pojavljuju hrvatski crkvenoslavenski nazivi životinja napisani glagoljicom. Igrači biraju jedan točan odgovor između četiriju ponuđenih opcija i testiraju svoje znanje glagoljice i hrvatskoga crkvenoslavenskoga.Kako bi se bolje usvojila glagoljica, i suvremene su hrvatske riječi napisane njome." />
     <meta name="twitter:image" content="og-slika.png" />
 </head>
 
@@ -46,7 +46,7 @@
                         <h2 class="winner" style="font-size:2rem">GlagoZoo</h2>
                         <br>
                         <hr class="style-two">
-                        <p>Interaktivni kviz u kojemu se pojavljuju hrvatski crkvenoslavenski nazivi životinja napisani glagoljicom. Igrači biraju jedan točan odgovor između četiriju ponuđenih opcija i testiraju svoje znanje glagoljice i hrvatskoga crkvenoslavenskoga.</p>
+                        <p>Interaktivni kviz u kojemu se pojavljuju hrvatski crkvenoslavenski nazivi životinja napisani glagoljicom. Igrači biraju jedan točan odgovor između četiriju ponuđenih opcija i testiraju svoje znanje glagoljice i hrvatskoga crkvenoslavenskoga. Kako bi se bolje usvojila glagoljica, i suvremene su hrvatske riječi napisane njome.</p>
                         <img src="naslovnica.png" style="max-width: 100%;">
                         <button class="btn uglata gla init-page__btn">igraj</button>
                                                 <br><p style="text-align: center;">Ovaj je kviz izrađen u sklopu projekta <a href="https://stin.hr/sadrzaj/digistin/" target="_blank">DigiSTIN</a> i <a href="https://stin.hr/sadrzaj/hrvatskoglagoljski-animalisticki-leksik/" target="_blank">HAL</a>.</p>
