--- a/pisem-glagoljicom/index.html
+++ b/pisem-glagoljicom/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Nauči čitati glagoljicu</title>
+    <title>Čitam glagoljicu</title>
     <meta charset="utf-8">
     <meta name="description" content="Igra namijenjena ljudima koji žele naučiti čitati glagoljicu. Igra se sastoji od čestih riječi i rečenica koje su napisane na glagoljici.">
     <meta name="keywords" content="kviz, LZMK, Leksikografski zavod Miroslav Krleža, enciklopedije, leksikoni">
@@ -19,13 +19,13 @@
     <script src="js/sweetalert2.min.js"></script>
     <link rel="stylesheet" href="css/sweetalert2.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <meta property="og:title" content="Nauči čitati glagoljicu" />
+    <meta property="og:title" content="Čitam glagoljicu" />
     <meta property="og:description" content="Igra namijenjena ljudima koji žele naučiti čitati glagoljicu. Igra se sastoji od čestih riječi i rečenica koje su napisane na glagoljici." />
     <meta property="og:image" content="og-slika.png" />
     <meta property="og:url" content="https://ahrefs.com/blog/open-graph-meta-tags/" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@stin" />
-    <meta name="twitter:title" content="Nauči čitati glagoljicu" />
+    <meta name="twitter:title" content="Čitam glagoljicu" />
     <meta name="twitter:description" content="Igra namijenjena ljudima koji žele naučiti čitati glagoljicu. Igra se sastoji od čestih riječi i rečenica koje su napisane na glagoljici." />
     <meta name="twitter:image" content="og-slika.png" />
 </head>
@@ -43,7 +43,7 @@
             <div class="container container2">
                 <div class="modal-overlay">
                     <div class="modal">
-                        <h2 class="winner" style="text-transform: uppercase; font-size:2rem">Nauči čitati glagoljicu</h2>
+                        <h2 class="winner" style="text-transform: uppercase; font-size:2rem">Čitam glagoljicu</h2>
                         <br>
                         <hr class="style-two"><br>
                         <div id="uvod">                                                <p>Igra namijenjena ljudima koji žele naučiti čitati glagoljicu. Igra se sastoji od čestih riječi i rečenica koje su napisane na glagoljici.</p>
