--- a/pisem-glagoljicom/index.html
+++ b/pisem-glagoljicom/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>Čitam glagoljicu</title>
     <meta charset="utf-8">
-    <meta name="description" content="Igra namijenjena ljudima koji žele naučiti čitati glagoljicu. Igra se sastoji od čestih riječi i rečenica koje su napisane na glagoljici.">
-    <meta name="keywords" content="kviz, LZMK, Leksikografski zavod Miroslav Krleža, enciklopedije, leksikoni">
-    <meta name="author" content="LZMK">
+    <meta name="description" content="Igra namijenjena ljudima koji žele naučiti čitati glagoljicu. Zadatak je česte riječi i rečenice koje su napisane glagoljicom prepisati latinicom.">
+    <meta name="keywords" content="Staroslavenski institut, glagoljica, čitanje">
+    <meta name="author" content="STIN">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/normalize.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
@@ -20,14 +20,14 @@
     <link rel="stylesheet" href="css/sweetalert2.min.css">
     <link rel="stylesheet" href="css/style.css">
     <meta property="og:title" content="Čitam glagoljicu" />
-    <meta property="og:description" content="Igra namijenjena ljudima koji žele naučiti čitati glagoljicu. Igra se sastoji od čestih riječi i rečenica koje su napisane na glagoljici." />
-    <meta property="og:image" content="og-slika.png" />
+    <meta property="og:description" content="Igra namijenjena ljudima koji žele naučiti čitati glagoljicu. Zadatak je česte riječi i rečenice koje su napisane glagoljicom prepisati latinicom." />
+    <meta property="og:image" content="og-slika.jpg" />
     <meta property="og:url" content="https://ahrefs.com/blog/open-graph-meta-tags/" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@stin" />
     <meta name="twitter:title" content="Čitam glagoljicu" />
-    <meta name="twitter:description" content="Igra namijenjena ljudima koji žele naučiti čitati glagoljicu. Igra se sastoji od čestih riječi i rečenica koje su napisane na glagoljici." />
-    <meta name="twitter:image" content="og-slika.png" />
+    <meta name="twitter:description" content="Igra namijenjena ljudima koji žele naučiti čitati glagoljicu. Zadatak je česte riječi i rečenice koje su napisane glagoljicom prepisati latinicom." />
+    <meta name="twitter:image" content="og-slika.jpg" />
 </head>
 
 <body>
@@ -46,7 +46,7 @@
                         <h2 class="winner" style="text-transform: uppercase; font-size:2rem">Čitam glagoljicu</h2>
                         <br>
                         <hr class="style-two"><br>
-                        <div id="uvod">                                                <p>Igra namijenjena ljudima koji žele naučiti čitati glagoljicu. Igra se sastoji od čestih riječi i rečenica koje su napisane na glagoljici.</p>
+                        <div id="uvod"><p>Igra namijenjena ljudima koji žele naučiti čitati glagoljicu. Zadatak je česte riječi i rečenice koje su napisane glagoljicom prepisati latinicom.</p>
 <p class="opis" style="text-align: justify; font-size:1.5rem; padding: 10px;"></p>
 
                         <button class="btn uglata gla" onclick="document.getElementById('uvod').style.display = 'none';document.getElementById('razina').style.display = 'block'">igraj</button></div>
